--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .app{
@@ -9,3 +12,12 @@
   flex-direction: column;
   width: 100%;
 }
+
+/* navbar styles */
+.link{
+  padding: 30px;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+/* end of navbar styles */
